# redis-stream-log-playground

./: Makefile  README.md  app.Dockerfile  docker-compose.yaml  pyproject.toml
app/: functions.py  main.py  redis.py  schema.py  settings.py
templates/: stream.html
